pcp-gui 1.5.6 (not yet released)
    - Initial toward supporting event record decoding and display in
      pmchart.

pcp-gui 1.5.5 (21 March 2012)
    - Fix long-standing pmchart bug where the current archive position
      would revert to the beginning of the archive after adding a new
      chart or plot to an existing chart.

pcp-gui 1.5.4 (17 January 2012)
    - Need to remake aclocal.m4 to pick up autoconf macro change.

pcp-gui 1.5.3 (8 January 2012)
    - Add Encoding=UTF-8, needed by desktop-file-validate for
      RHEL builds.
    - Fix man page format configure check for minimal build deps
      used in Debian builds.

pcp-gui 1.5.2 (1 December 2011)
    - Updates to source files with incorrect FSF address for rpmlint.
    - Fix compilation warnings.
    - Relax Debian dependencies somewhat (only pcp libs required).
    - Add new Qt help library dependency on Debian build.
    - Additional examples in the pcp-doc documents.

pcp-gui 1.5.1 (1 October 2010)
    - Build fix for rpm generation.
    - Build fix for Win32 builds (hide Mac).
    - Add support for .bz2 manual page compression.
    - Fix lintian warning (deb packages) wrt an empty dir.

pcp-gui 1.5.0 (29 September 2010)
    - Split out pcp-doc from pcp-gui (packaging, not source).
    - Merged Qwt 5.2 sources.
    - Fix image generation issues.
    - Fix auto-scaling Y-axis to clamp it at zero.
    - Fix dotted instance names in Edit Chart dialog.
    - Fix online menu links to tutorial in pmchart/pmtime.
    - Fix long archive path name failure.
    - Added hotkeys for chart delete, new tab and close tab.
    - Fixed up the not-selected-chart font colouring.
    - Improved Mac build process to ship Qt libraries.
    - Fix online help links and icons in Qt adp files.
    - Merged old (SGI) tutorial docs, and extensively updated them.
    - Added new docs for pmimport, and disk workkload modelling.
    - Updated images in the online docs to match current UI.

pcp-gui 1.4.9 (13 July 2010)