@@ -1,1 +1,3 @@
 deb
+pcp-gui.src
+pack-pcp-gui.bin
