@@ -1,0 +1,15 @@
+var/lib/pcp-gui/testsuite/qa
+var/lib/pcp-gui/testsuite/qa/archives
+var/lib/pcp-gui/testsuite/qa/interact
+var/lib/pcp-gui/testsuite/qa/src
+var/lib/pcp-gui/testsuite/qa/src/dynamic
+var/lib/pcp-gui/testsuite/qa/src/qmc_context
+var/lib/pcp-gui/testsuite/qa/src/qmc_desc
+var/lib/pcp-gui/testsuite/qa/src/qmc_dynamic
+var/lib/pcp-gui/testsuite/qa/src/qmc_format
+var/lib/pcp-gui/testsuite/qa/src/qmc_group
+var/lib/pcp-gui/testsuite/qa/src/qmc_hosts
+var/lib/pcp-gui/testsuite/qa/src/qmc_indom
+var/lib/pcp-gui/testsuite/qa/src/qmc_metric
+var/lib/pcp-gui/testsuite/qa/src/qmc_source
+var/lib/pcp-gui/testsuite/qa/views
