@@ -1,0 +1,5 @@
+*.bz2
+*.gz
+*.lzma
+*.xz
+*.[1-9].tmp
