@@ -1,4 +1,5 @@
 pcp-gui 1.5.6 (not yet released)
+    - Added the pcp-gui-testsuite package into the builds.
     - Initial toward supporting event record decoding and display in
       pmchart.
 
